[tool.poetry]
name = "ode-viz"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "ode_viz"}]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"
scipy = "^1.13.0"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
